# ebpf-firmwall

./: .gitignore  README.md
ebpf/: .clang-format  pyproject.toml
ebpf/src/ebpf-python/: config.py  main.py  utils.py  xdp.c
ml/: .gitattributes  .gitignore  pyproject.toml  research.ipynb
ml/data/: randomjson.data
ml/model/: lr.pkl  ml.pkl
ml/src/ml/: app.py  config.py  util.py
server/: go.mod  main.go
src/ebpf-python/: flow.py  main.py  packet.py  test.py  utils.py  xdp.c
waf/: config.go  controller.go  dto.go  go.mod  go.sum  main.go  middleware.go  util.go
waf/config/: config.example.toml
website/: .eslintrc.js  .umirc.ts  package.json  pnpm-lock.yaml
website/mock/: user.ts
website/src/: access.ts  app.ts
website/src/constants/: index.ts
website/src/pages/: 404.tsx
website/src/pages/Dashboard/: index.tsx
website/src/pages/Events/: index.tsx
website/src/pages/Login/: index.tsx
website/src/pages/Rules/: addForm.tsx  editForm.tsx  index.tsx
website/src/pages/Settings/: editForm.tsx  index.tsx
website/src/pages/Websites/: addForm.tsx  editForm.tsx  index.tsx
website/src/services/: index.ts  rule.ts  typings.d.ts  user.ts  website.ts
website/src/services/demo/: typings.d.ts
