[tool.poetry]
name = "ebpf-python"
version = "0.1.0"
description = ""
authors = ["node189 <node189@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

