[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["node189 <node189@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.4.2"
aiokafka = "^0.10.0"
kafka-python = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
